--- a/package.json
+++ b/package.json
@@ -10,24 +10,34 @@
   },
   "dependencies": {
     "@prisma/client": "^6.16.2",
+    "@tanstack/react-query": "^5.90.2",
     "autoprefixer": "^10.4.21",
     "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
+    "chart.js": "^4.5.0",
     "cloudinary": "2.7.0",
+    "embla-carousel-react": "^8.6.0",
+    "emoji-picker-react": "^4.13.3",
     "framer-motion": "^12.23.16",
+    "html-to-docx": "^1.8.0",
     "jose": "^5.10.0",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^3.0.3",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.544.0",
     "mongodb": "^6.19.0",
     "next": "15.5.3",
     "openai": "^5.22.1",
+    "papaparse": "^5.5.3",
     "postcss": "^8.5.6",
     "react": "19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "19.1.0",
     "react-dropzone": "^14.3.8",
     "recharts": "^3.2.1",
+    "twitter-api-v2": "^1.27.0",
     "zod": "^4.1.9"
   },
   "devDependencies": {
