OAuth, AI Analysis, chat enhancement, chat history, and more

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,7 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
+    "types/**/*.ts",
     "tailwind.config.ts"
   ],
   "exclude": ["node_modules"]
