--- a/package.json
+++ b/package.json
@@ -9,12 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.16.2",
     "@tanstack/react-query": "^5.90.2",
     "autoprefixer": "^10.4.21",
     "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
-    "bcryptjs": "^3.0.2",
     "chart.js": "^4.5.0",
     "cloudinary": "2.7.0",
     "embla-carousel-react": "^8.6.0",
@@ -29,6 +29,7 @@
     "lucide-react": "^0.544.0",
     "mongodb": "^6.19.0",
     "next": "15.5.3",
+    "next-auth": "^4.24.11",
     "openai": "^5.22.1",
     "papaparse": "^5.5.3",
     "postcss": "^8.5.6",
@@ -37,6 +38,7 @@
     "react-dom": "19.1.0",
     "react-dropzone": "^14.3.8",
     "recharts": "^3.2.1",
+    "resend": "^6.1.0",
     "twitter-api-v2": "^1.27.0",
     "zod": "^4.1.9"
   },
